2005-05-13  Roman Kennke  <roman@kennke.org>

	* javax/swing/DefaultButtonModel.java:
	Removed superfluous semicolon.

2005-05-13  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractButton.java
	(ButtonChangeListener): Added this inner class.

2005-05-13  Roman Kennke  <roman@kennke.org>

	* javax/swing/JComponent.java
	(requestFocus): Added method.
	(requestFocus(boolean)): Added method.
	(requestFocusInWindow): Added method.
	(addNotify): Added method.
	(removeNotify): Added method.
	(contains): Added method.
	(disable): Added method.
	(enable): Added method.
	(getGraphics): Added method.
	(getX): Added method.
	(getY): Added method.
	(getHeight): Added method.
	(getWidth): Added method.
	(getPropertyChangeListener): Added method.
	(print): Added method.
	(printAll): Added method.
	(printComponent): Added method.
	(printChildren): Added method.
	(printBorder): Added method.
	(processMouseMotionEvent): Added method.
	(reshape): Added method.

2005-05-12  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/examples/swing/Demo.java:
	Added a JTable example.

2005-05-12  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/examples/swing/Demo.java:
	Added Examples menu to menu bar.
	Slightly changed the layout of the main panel so that an overlenghty
	button panel at the bottom is displayed in a useful way.

2005-05-12  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/examples/swing/Demo.java:
	Added examples for JEditorPane and JTree.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/DefaultMenuLayout.java:
	Added this class.
	* javax/swing/plaf/basic/BasicPopupMenuUI.java
	(installUI): Use the new DefaultMenuLayout instead of GridBagLayout.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractCellEditor.java
	(constructor): Implemented.
	(isCellEditable): Implemented.
	(shouldSelectCell): Implemented.
	(stopCellEditing): Implemented.
	(cancelCellEditing): Implemented.
