@@ -1,5 +1,10 @@
 2005-05-13  Roman Kennke  <roman@kennke.org>
 
+	* javax/swing/RepaintManager.java:
+	(getVolatileOffscreenBuffer): Added methods.
+
+2005-05-13  Roman Kennke  <roman@kennke.org>
+
 	* javax/swing/DefaultButtonModel.java:
 	Removed superfluous semicolon.
 
